2009-05-11  Norbert Leser  <norbert.leser@nokia.com>

Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=24536

        Symbian compilers cannot resolve WTF::PassRefPtr<JSC::Profile>
        unless Profile.h is included.

        * profiler/ProfileGenerator.h:

git-svn-id: svn://svn.chromium.org/blink/trunk@43495 bbb929c8-8fbe-4397-9dbb-9b2b20218538